waybar: add bluetooth module, fix wifi icons, add uniform spacing

--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -17,3 +17,10 @@ tooltip {
 #clock {
     padding: 0 16px;
 }
+
+#network,
+#bluetooth,
+#battery,
+#tray {
+    padding: 0 8px;
+}
